syntax = "proto3";

package noshtastic_link;

// Link frame definition
message LinkFrame {
  fixed32 magic = 1; // 'NOSH'
  uint32 version = 2;
  oneof payload {
    LinkMsg complete = 3;	// A complete, unfragmented message
    LinkFrag fragment = 4;	// A fragment of a message
    LinkNeed need = 5;		// List of needed fragment resends
  }
}

// A complete link message (not fragmented)
message LinkMsg {
  fixed64 msgid = 1;		// Truncated nostr msgid (or hash for others)
  bytes data = 2;
}

// A fragment of a link message
message LinkFrag {
  fixed64 msgid = 1;		// Truncated nostr msgid (or hash for others)
  uint32 numfrag = 2;   	// Total number of fragments in the packet
  uint32 fragndx = 3;		// Index of this fragment (starting at 0)
  uint32 rotoff = 4;		// Octet rotation offset (see noshtastic:#15)
  bytes data = 5;		// Raw data buffer for this fragment
}

// Missing fragments from a particular message
message LinkMissing {
  fixed64 msgid = 1;		// Truncated nostr msgid (or hash for others)
  repeated uint32 fragndx = 2; 	// List of all missing fragments
}

// A request for missing fragments from multiple messages
message LinkNeed {
  repeated LinkMissing missing = 1;
}
